--- a/1.md
+++ b/1.md
@@ -1,10 +1,11 @@
 ```
-           <meta name="description" content="We reviewed over 60 studies. We found a dream job isn&#039;t highly paid or easy, and need not involve your &quot;passion&quot;. Rather, focus on 6 key ingredients." />
+           <meta name="description" content="Мы изучили более 60 исследований. Мы выяснили шесть основных составляющих «работы
+мечты». Доход не входит в их число, и они не сводятся к простому «занимайся тем, что любишь" />
            <link rel="canonical" href="https://80000hours.org/career-guide/job-satisfaction/" />
            <meta property="og:locale" content="en_US" />
            <meta property="og:type" content="article" />
-           <meta property="og:title" content="We reviewed 60 studies on what makes for a dream job. Here’s what we found." />
-           <meta property="og:description" content="We reviewed all the research, drawing on over 60 studies, and found the six key factors for true job satisfaction. None of them is &#039;following your passion&#039;." />
+           <meta property="og:title" content="Мы изучили более 60 исследований, посвященных источникам удовлетворения в карьере. И вот что выяснили." />
+           <meta property="og:description" content="Мы изучили более 60 исследований, выяснили шесть основных составляющих «работы мечты». И ни одна не сводятся к простому «занимайся тем, что любишь»." />
            <meta property="og:url" content="https://80000hours.org/career-guide/job-satisfaction/" />
            <meta property="og:site_name" content="80,000 Hours" />
            <meta property="article:publisher" content="https://www.facebook.com/80000Hours" />
@@ -13,34 +14,34 @@
            <meta property="og:image:width" content="1199" />
            <meta property="og:image:height" content="629" />
            <meta name="twitter:card" content="summary_large_image" />
-           <meta name="twitter:description" content="We reviewed all the research, drawing on over 60 studies, and found the six key factors for true job satisfaction. None of them is &#039;following your passion&#039;." />
-           <meta name="twitter:title" content="We reviewed 60 studies on what makes for a dream job. Here’s what we found." />
+           <meta name="twitter:description" content="Мы изучили более 60 исследований, выяснили шесть основных составляющих «работы мечты». И ни одна не сводятся к простому «занимайся тем, что любишь»." />
+           <meta name="twitter:title" content="Мы изучили более 60 исследований, посвященных источникам удовлетворения в карьере. И вот что выяснили." />
            <meta name="twitter:site" content="@80000hours" />
            <meta name="twitter:image" content="https://cdn.80000hours.org/wp-content/uploads/2016/04/icecream-taster-v16-e1465228392655.png" />
            <meta name="twitter:creator" content="@80000hours" />
 ```
 
-Part 1:
+Часть 1:
 
-What makes for a dream job? Here&#039;s what the evidence says.
+Что такое «работа мечты»?
 
-# We reviewed over 60 studies about what makes for a dream job. Here&#8217;s what we&nbsp;found.
+# Мы изучили более 60 исследований, посвященных источникам удовлетворения в карьере. И вот что выяснили.
 
 By <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Benjamin Todd</a></span> &middot; Last updated <time class="update" datetime="2017-04-07T00:00:00+00:00">April 2017</time>
 
 ![](https://cdn.80000hours.ru/cartoon_1.jpg)
 
-We all want to find a dream job that’s enjoyable and meaningful, but what does that actually mean?
+Все мы хотим найти работу своей мечты; хотим, чтобы она была значимой и в то же время приносила удовольствие. Но что стоит за этими словами?
 
-Some people imagine that the answer involves discovering their *passion* through a flash of insight, while others think that the key elements of their dream job are that it be easy and highly paid.
+Одни верят, что найдут ответ, следуя своим увлечениям; другие же считают, что главное в работе мечты — чтобы она была нетяжелой и высокооплачиваемой.
 
-We’ve reviewed two decades of research into the causes of a satisfying life and career, drawing on over 60 studies, and we didn’t find much evidence for these views.
+Мы изучили более 60 исследований, проведенных за два последних десятилетия и посвященных источникам удовлетворения в жизни и карьере, но так и не обнаружили достаточного подтверждения ни той, ни другой теории. 
 
-Instead, we found six key ingredients of a dream job. They don’t include income, and they aren’t as simple as “following your passion”.
+Зато мы выяснили шесть основных составляющих «работы мечты». Доход не входит в их число, и они не сводятся к простому «занимайся тем, что любишь».
 
-In fact, following your passion can lead you astray. Steve Jobs was passionate about Zen Buddhism before entering technology. Condoleezza Rice was a talented classical musician before she started studying politics.
+На самом деле, следуя за страстью, можно попросту сбиться с пути. Перед тем как увлечься цифровыми технологиями, Стив Джобс был страстным приверженцем дзен-буддизма. Кондолиза Райс с упоением занималась музыкой, пока не начала изучать политику. 
 
-Rather, you can develop passion by doing work that you find enjoyable and meaningful. The key is to get good at something that helps other people.
+Вполне вероятно, что в итоге вы страстно увлечетесь той работой, которая будет для вас много значить и приносить удовольствие. Секрет в том, чтобы добиться успеха в деле, полезном для других.
 
  *Watch this video or read the full article (15 minutes). If you just want the raw research, see <a href="/articles/job-satisfaction-research/">the evidence review</a>.*
 
@@ -58,50 +59,52 @@ Rather, you can develop passion by doing work that you find enjoyable and meanin
                    </div>
 ```
 
-## Where we go wrong
+## Что мы делаем не так
 
-The usual way people try to work out their dream job is to *imagine* different jobs and think about how satisfying they seem. Or they think about times they’ve felt fulfilled in the past and self-reflect about what matters most to them.
+Обычно, пытаясь выбрать работу своей мечты, люди перебирают в воображении несколько профессий и размышляют, будут ли они приносить им удовлетворение. Или же вспоминают, в каких случаях они чувствовали себя полностью реализованными, и решают, что для них является самым важным. 
 
 ![](https://cdn.80000hours.org/wp-content/uploads/2016/03/xkcd-dream-job.png)[`<a href="https://xkcd.com/1346/" target="_blank"><center>xkcd</center></a>`]
 
-If this were a normal career guide, we’d start by getting you to write out a list of what you most want from a job, like “working outdoors” and “working with ambitious people”. The best-selling career advice book of all time, *What Color is Your Parachute*, recommends exactly this. The hope is that, deep down, people know what they really want.
+Если бы эта книга была обычным руководством по профориентации, мы бы велели вам написать список ваших главных ожиданий от работы вроде «работать на свежем воздухе» или «работать с амбициозными людьми». Книга «Какого цвета ваш парашют?», самое популярное в мире руководство по поиску работы, рекомендует начать именно с этого. Предполагается, что в глубине души мы все знаем, чего хотим на самом деле.
 
-However, research shows that although self-reflection is useful, it only goes so far.
+Однако исследования подтверждают, что самоанализ может быть полезен лишь отчасти. 
 
-You can probably think of times in your own life when you were excited about a holiday or party, but when it actually happened, it was just okay. In the last few decades, research has shown that this is common: we’re bad at predicting what will make us most happy, and we don’t even realise how bad we are. You can find an excellent overview of this research in <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427" target="_blank"> *Stumbling on Happiness*</a>, by Harvard Professor Dan Gilbert.[^:`There has been an <a href="https://en.wikipedia.org/wiki/Affective_forecasting">extensive programme</a> of research into how good humans are at predicting the effects of future events on their emotional well-being. It began with Kahneman and Snell in the early 1990s, and has recently been led by Harvard psychologist Daniel Gilbert. Much of the research is summarised in Gilbert’s book <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427">Stumbling on Happiness</a>. A recent review is in <a href="http://web.archive.org/web/20170403154011/https://dash.harvard.edu/bitstream/handle/1/3110936/Gilbert_WhyBrainTalksItself.pdf?sequence=1">Gilbert and Wilson (2009)</a>. The main takeaway is that we are bad at predicting how we will feel in the future, and we don’t realise this. We’ve previously written about our failures to predict how we will feel <a href="/2012/09/do-you-really-know-what-job-will-make-you-happy/">here</a>.`]
+Вы наверняка сможете вспомнить пример из собственной жизни, когда вы с упоением предвкушали отпуск или вечеринку, но, когда событие произошло, от него не осталось каких-то особых впечатлений. За последние десятилетия психологи обнаружили одну закономерность: нам редко удается предугадать, от чего мы получим максимум удовольствия, и мы даже не представляем себе, насколько часто мы ошибаемся. Превосходный обзор исследований на эту тему можно найти в книге <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427" target="_blank"> *«Спотыкаясь о счастье»*</a>, гарвардского профессора Дэна Гилберта.[^:`There has been an <a href="https://en.wikipedia.org/wiki/Affective_forecasting">extensive programme</a> of research into how good humans are at predicting the effects of future events on their emotional well-being. It began with Kahneman and Snell in the early 1990s, and has recently been led by Harvard psychologist Daniel Gilbert. Much of the research is summarised in Gilbert’s book <a href="http://www.amazon.com/Stumbling-Happiness-Daniel-Gilbert/dp/1400077427">Stumbling on Happiness</a>. A recent review is in <a href="http://web.archive.org/web/20170403154011/https://dash.harvard.edu/bitstream/handle/1/3110936/Gilbert_WhyBrainTalksItself.pdf?sequence=1">Gilbert and Wilson (2009)</a>. The main takeaway is that we are bad at predicting how we will feel in the future, and we don’t realise this. We’ve previously written about our failures to predict how we will feel <a href="/2012/09/do-you-really-know-what-job-will-make-you-happy/">here</a>.`]
 
-It turns out we’re even bad at *remembering* how satisfying different experiences were. One well-established mistake is that we tend to judge an experience mainly by its ending. If you missed your flight on the last day of an enjoyable holiday, you’ll probably remember the holiday as bad. This means we can’t just trust our intuitions; we need a more systematic way of working out which job is best for us.
+Оказывается, мы даже с трудом запоминаем, насколько приятными были те или иные события. Одна из традиционных
+ошибок заключается в том, что мы часто судим о событии по его завершению. Если вы прекрасно проводили время на отдыхе, но в последний день опоздали на самолет, скорее всего, вы будете помнить, что отдых не удался. Это означает, что полагаться на интуицию или даже память недостаточно. Пожалуй, нам нужен более систематический подход, чтобы выяснить, какая работа нам подходит больше всего.
 
-> The fact that we often judge the pleasure of an experience by its ending can cause us to make some curious choices.<br />
-– Prof. Dan Gilbert, Stumbling on Happiness
+> Оценивая событие по тому, как оно закончилось, мы рискуем принять сомнительное решение. <br />
+– Профессор Дэн Гилберт, «Спотыкаясь о счастье».
 
-The same research that proves how bad we are at self-reflection can help us make more informed choices. We now have two decades of research into positive psychology – the science of happiness – as well as decades of research into motivation and job satisfaction. We’ll summarise the main lessons of this research and explain what it means for finding a fulfilling job.
+Те же исследования, которые уличили нас в проблемах с самоанализом, могут помочь нам научиться принимать решения более осознанно. Теперь в нашем распоряжении 20 лет исследований в области позитивной психологии — науки о счастье, а также десятилетия исследований по мотивации и удовлетворенности работой. Мы обобщим основные уроки, которые мы вынесли из этих исследований, и объясним, какое они имеют значение для поиска успешной работы
 
-## Two overrated goals for a fulfilling career
+## Две переоцененных цели успешной карьеры
 
-People often imagine that a dream job is well paid and easy.
+Мы часто представляем себе, что работа мечты должна быть высокооплачиваемой и нетяжелой. .
 
-One of the leading job rankings in the US, provided by Careercast, rates jobs on the following criteria:[^:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
+В одном из ведущих в США рейтингов профессий, предоставленном сайтом Careercast, профессии ранжируются по следующим критериям:`CareerCast’s 2015 methodology is described <a href="http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">here</a>. <br> <a href="https://web.archive.org/web/20160302120256/http://www.careercast.com/jobs-rated/2015-jobs-rated-methodology">Archived link</a>, retrieved 2-March-2016`]
 
-1. Is it highly paid?
-1. Is it going to be highly paid in the future?
-1. Is it stressful?
-1. Is the working environment unpleasant?
+1. высоко ли оплачивается работа?
+1. будет ли она высокооплачиваемой в будущем?
+1. связана ли она со стрессом?
+1. являются ли условия труда неприятными?
 
-Based on this, the best job in 2015 was: actuary.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] That is, someone who uses statistics to measure and manage risks, often in the insurance industry.
+BИсходя из этих критериев, лучшей профессией в 2015 году была названа профессия актуария.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] Актуарий — это человек, который на основе статистики оценивает риски и управляет ими, зачастую в страховых компаниях. 
 
-It’s true that actuaries are more satisfied with their jobs than average, but they’re not among the most satisfied.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Only 36% say their work is meaningful,[^:`Payscale’s surveys, which cover tens of thousands of workers, found only 36% of actuaries found their work meaningful. Job satisfaction was also high at 80%, but a significant number of jobs were rated over 80%.<br>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list</a>.`] so being an actuary isn’t a particularly fulfilling career.
+Актуарии действительно испытывают удовлетворение от работы больше среднего, но в число наиболее удовлетворенных работников они не входят.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Всего 36% отметили, что их работа является значимой,[^:`Payscale’s surveys, which cover tens of thousands of workers, found only 36% of actuaries found their work meaningful. Job satisfaction was also high at 80%, but a significant number of jobs were rated over 80%.<br>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              <a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list</a>.`] так что профессия актуария вовсе не обещает сверхуспешной карьеры.
 
-So the *Careercast* list isn’t capturing everything. In fact, the evidence suggests that money and avoiding stress aren’t that important.
+Получается, что в списке Careercast учтено не все. На поверку оказывается, что деньги и отсутствие стресса не так уж важны. 
 
-### Money makes you happier, but only a little
+### Деньги делают нас счастливее, но ненамного 
 
-It’s a cliche that “you can’t buy happiness”, but at the same time, financial security is among most people’s <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">top career priorities</a>[^:` Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]. Moreover, when people are asked what would most improve the quality of their lives, the most common answer is more money. [^:`<blockquote>When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] What’s going on here? Which side is right?
+Избитая истина гласит о том, что счастье не купишь, однако финансовая безопасность <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf" target="_blank">лидирует в списке карьерных приоритетов большинства людей</a>[^:` Net Impact, What Workers Want in 2012 <br> See Figure 1.1 <br> <a href="https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf">https://www.netimpact.org/sites/default/files/documents/what-workers-want-2012.pdf</a>`]. Более того, самый распространенный ответ на вопрос «что могло бы больше всего улучшить качество вашей жизни?» — это деньги. [^:`<blockquote>When individuals are asked what would most improve the quality of their lives, the most common response is a higher income</blockquote> Judge, Timothy A., et al. "The relationship between pay and job satisfaction: A meta-analysis of the literature." Journal of Vocational Behavior 77.2 (2010): 157-167. <br> <a href="http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf">http://www.panglossinc.com/documents/Therelationshipbetweenpayandjobsatisfaction.pdf</a>`] В чем же подвох? Кто прав, кто виноват?
 
-A lot of the research on this question is remarkably low quality. But several recent major studies in economics offer more clarity. We <a href="/articles/money-and-happiness/">reviewed the best studies available</a>, and the truth turns out to lie in the middle: money *does* make you happy, but only a little.
-
-Here are the findings from a huge survey in the United States in 2010:
+Качество исследований на эту тему по большей части крайне низкое. Тем не менее несколько недавних крупных работ по экономике кое-что проясняют. Мы <a href="/articles/money-and-happiness/"> проанализировали лучшие из доступных исследований и обнаружили, что
+истина где-то посередине: деньги действительно делают нас счастливее, но ненамного. 
+           
+Вот что выяснилось в результате масштабного опроса, проведенного в США в 2010 году:
 
 ![Money and happiness survey](https://cdn.80000hours.org/wp-content/uploads/2016/05/80K_incomewellnessA_V6-1024x543.png)[` *High income improves evaluation of life but not emotional well-being*, D. Kahneman and A. Deaton, 2010, <a href="https://web.archive.org/web/20160305061814/http://www.pnas.org/content/107/38/16489.full" target="_blank">link</a>`]
 
@@ -438,34 +441,34 @@ What’s more, as we’ll explain in the next section, as a college graduate in 
 
 ## Conclusion
 
-To have a dream job, don’t worry too much about money and stress, and don’t endlessly self-reflect to find your one true passion.
+Задумываясь о работе мечты, не стоит особо беспокоиться о деньгах и стрессе, не стоит и бесконечно копаться в себе в поисках серьезного увлечения.
 
-Rather, get good at something that helps others. It’s best for you, and it’s best for the world. This is the reason we set up 80,000 Hours – our mission is to help you find a career that contributes.
-
-But which jobs help people? Can one person really make much difference? That’s what we’ll answer in the next section.
+Но какие профессии приносят пользу другим? Может ли один человек изменить мир к лучшему? На эти вопросы мы будем отвечать в следующей статье.
 
  <div class="panel clearfix">
-                    <h2><span id="apply-this-to-your-own-career" class="toc-anchor"></span>Apply this to your own career</h2>
-                    <p>These six ingredients, especially helping others and getting good at your job, can act as guiding lights – they’re what to aim to find in a dream job long-term.</p>
-                    <p>Here are some exercises to help you start applying them.</p>
+                    <h2><span id="apply-this-to-your-own-career" class="toc-anchor"></span>Примените это к своей карьере</h2>
+                    <p>Наши шесть составляющих, особенно помощь другим и совершенствование профессиональных навыков,
+могут послужить путеводной звездой для ваших поисков: это то, к чему следует стремиться в поисках идеальной работы в долгосрочной перспективе.</p>
+                    <p>Вот несколько упражнений, чтобы помочь вам в их применении.</p>
                     <ol>
-                        <li>Practice using the six ingredients to make some comparisons. Pick two options you’re interested in, then score them from one to five on each factor. You can use <a href="https://docs.google.com/document/d/12e1ei-CUNHBPr6U_k89ylHQPQ8wwh9usPO6GRVnPQyA/edit#heading=h.6l31h1ur692w" target="_blank">this table</a>.</li>
-                        <li>The six ingredients we list are only a starting point. There may be other factors that are especially important to you, so we also recommend doing the following exercises. They’re not perfect – as we saw earlier, our memories of what we’ve found fulfilling can be unreliable – but completely ignoring your past experience isn’t wise either.<a id="fn-ref-11" href="#fn-11" rel="footnote" class="footnote-link" aria-label="Footnote" data-hasqtip="10" oldtitle="<p>You can get more accurate information on what you enjoy over time by rating your happiness at the end of each day. That way you don’t need to rely on unreliable memory.</p>
+                        <li>Используйте шесть составляющих идеальной работы, чтобы провести сравнительный анализ. Выберите два потенциальных места работы, оцените их по шкале от 1 до 5 баллов по каждому из критериев <a href="https://docs.google.com/document/d/12e1ei-CUNHBPr6U_k89ylHQPQ8wwh9usPO6GRVnPQyA/edit#heading=h.6l31h1ur692w" target="_blank">this table</a>.</li>
+                        <li>TШесть составляющих, перечисленных выше, всего лишь отправная точка. Могут быть и другие факторы, представляющие для вас особую важность, так что предлагаем выполнить и следующие упражнения. Не то чтобы они были идеальны — мы ведь
+уже выяснили, как ненадежны бывают воспоминания, — но и закрывать глаза на прошлый опыт тоже не стоит.<a id="fn-ref-11" href="#fn-11" rel="footnote" class="footnote-link" aria-label="Footnote" data-hasqtip="10" oldtitle="<p>You can get more accurate information on what you enjoy over time by rating your happiness at the end of each day. That way you don’t need to rely on unreliable memory.</p>
 " title=""><sup>11</sup></a>
                             <ul>
-                                <li>When have you been most fulfilled in the past? What did these times have in common?</li>
-                                <li>Imagine you just found out you’re going to die in ten years. What would you spend your time doing?</li>
-                                <li>Can you make any of our six factors more specific? e.g. what *kinds* of people do you most like to work with?</li>
+                                <li>Вспомните моменты, когда чувствовали себя наиболее реализованными. Что общего у всех этих случаев?</li>
+                                <li>Представьте, что вы только что узнали, что через десять лет умрете. На что вы потратите свое время?</li>
+                                <li>Можете ли вы конкретизировать какие-то из наших шести условий? К примеру, с какими именно людьми вам понравится работать больше всего?</li>
                             </ul>
-                            <p>These questions should give you hints about what you find most fulfilling.
+                            <p>Эти вопросы помогут вам понять, какие факторы для вас имеют наибольшее значение.
                         </p></li>
-                        <li>Now, combine our list with your own thoughts to determine the four to eight factors that are most important to you in a dream job.</li>
-                        <li>When you’re comparing your options in the future, you can use this list of factors to work out which is best. Don’t expect to find an option that’s best on every dimension, rather, focus on finding the option that’s best on balance.</li>
+                        <li>Теперь объедините наш список с вашими личными идеями, чтобы определить от четырех до восьми факторов, наиболее важных для вашей идеальной работы.</li>
+                        <li>Когда будете сравнивать карьерные возможности в будущем, вы можете использовать этот список факторов, чтобы понять, какой из вариантов лучше. Не ждите, что какой-то из вариантов будет лидировать по всем параметрам, лучше остановитесь на самом оптимальном.</li>
                     </ol>
-                    <p><strong><a href="https://www.youtube.com/watch?v=G_l72q9K3Fw" target="_blank">Take a break</a></strong></p>
+                    <p><strong><a href="https://www.youtube.com/watch?v=G_l72q9K3Fw" target="_blank">Сделайте перерыв</a></strong></p>
                 </div>
                 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
-                    <h2 class="no_toc"><small>Read next:</small> Part 2: Which jobs really help people, and how much could you accomplish?</h2>
+                    <h2 class="no_toc"><small>Read next:</small> Часть 2: Which jobs really help people, and how much could you accomplish?</h2>
                     <p><a href="/career-guide/how-much-difference-can-one-person-make/" class="btn btn-primary">Continue →</a></p>
                     <p>Or if you’re new, <a href="/career-guide/" target="_blank">get an overview</a> of the whole career guide.</p>
                     <p>No time right now? Join <a href="/newsletter/" target="_blank">our newsletter</a> and we’ll send you one article each week:</p>
