--- a/1.md
+++ b/1.md
@@ -43,7 +43,7 @@ By <span class="byline author vcard"><a href="https://80000hours.org/author/benj
 
 Вполне вероятно, что в итоге вы страстно увлечетесь той работой, которая будет для вас много значить и приносить удовольствие. Секрет в том, чтобы добиться успеха в деле, полезном для других.
 
- *Watch this video or read the full article (15 minutes). If you just want the raw research, see <a href="/articles/job-satisfaction-research/">the evidence review</a>.*
+ *Посмотрите видео или прочитайте статью полностью (15 минут). Если интересует только исследование, то по ссылке <a href="/articles/job-satisfaction-research/"></a>.*
 
 !ytb-iY5Vd4LH1J4
 
@@ -90,7 +90,7 @@ By <span class="byline author vcard"><a href="https://80000hours.org/author/benj
 1. связана ли она со стрессом?
 1. являются ли условия труда неприятными?
 
-BИсходя из этих критериев, лучшей профессией в 2015 году была названа профессия актуария.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] Актуарий — это человек, который на основе статистики оценивает риски и управляет ими, зачастую в страховых компаниях. 
+Исходя из этих критериев, лучшей профессией в 2015 году была названа профессия актуария.[^:`<a href="http://www.careercast.com/jobs-rated/best-jobs-2015">Actuary was the top ranked career in 2015.</a> <br> <a href="https://web.archive.org/web/20160302120647/http://www.careercast.com/jobs-rated/best-jobs-2015">Archived link</a>, retrieved 2-Mar-2016.`] Актуарий — это человек, который на основе статистики оценивает риски и управляет ими, зачастую в страховых компаниях. 
 
 Актуарии действительно испытывают удовлетворение от работы больше среднего, но в число наиболее удовлетворенных работников они не входят.[^:`A national survey by the UK’s Cabinet Office in 2014 (published by the University of Kent) found actuaries ranked 64th out of 274 job titles, putting them in the top 23%. <br> <a href="http://www.bbc.com/news/magazine-26671221">BBC summary</a>, <a href="https://web.archive.org/web/20170416020107/http://www.bbc.com/news/magazine-26671221">Archived link</a>, retrieved 15-April-2017. <br> <a href="http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm">http://www.kent.ac.uk/careers/Choosing/happiest-careers.htm</a>`] Всего 36% отметили, что их работа является значимой,[^:`Payscale’s surveys, which cover tens of thousands of workers, found only 36% of actuaries found their work meaningful. Job satisfaction was also high at 80%, but a significant number of jobs were rated over 80%.<br>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               <a href="http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list">http://www.payscale.com/data-packages/most-and-least-meaningful-jobs/full-list</a>.`] так что профессия актуария вовсе не обещает сверхуспешной карьеры.
